update swagger and update feature delete avatar
